--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-description: Open Source Self Driving Car Initiative
+name: Open Source Self Driving Car Initiative
+description: A global and open organization comprised of several dedicated people working (in their free time) on full stack open source software and hardware to allow anyone to build from toy to full size self driving cars
